# learning-rust

./: 404.html  Cargo.toml  Makefile  README.md
docs/: backlog.md  install.md  local_doc.md  notes.md
src/: advanced_match.rs  algorithms.rs  basics.rs  boxes.rs  closures.rs  collections.rs  data_collections.rs  enums.rs  errors.rs  exercises.rs  expressions.rs  generics.rs  hashmaps.rs  lib.rs  lifetimes.rs  main.rs  messenger.rs  methods.rs  move_vars.rs  optionals.rs  ownership.rs  print_var_type.rs  random_numbers.rs  references.rs  results.rs  strings.rs  structs.rs  traits.rs  tuples.rs  variables.rs
src/add_millimeters_to_meters/: definition.rs  mod.rs
src/advanced_match/: definition.rs  mod.rs
src/algorithms/: bubble_sort.rs  cocktail_sort.rs  comb_sort.rs  insertion_sort.rs  merge_sort.rs  mod.rs  quick_sort.rs  selection_sort.rs
src/api_mutex/: definition.rs  mod.rs  mutexes.rs  thread_parking.rs
src/arrays/: definition.rs  mod.rs
src/automatic_clean/: mod.rs
src/basics/: arrays.rs  boolean_type.rs  booleans.rs  borrowing.rs  branches.rs  character_type.rs  characters.rs  clone.rs  compound_types.rs  compounds.rs  constants.rs  control_flow.rs  convert_values.rs  floating_point.rs  floats.rs  functions.rs  if_let.rs  integers.rs  loops.rs  match_statements.rs  mod.rs  num_operations.rs  numeric_operations.rs  recursion.rs  scalar_types.rs  scalars.rs  scopes.rs  shadowing.rs  slices.rs  type_casting.rs  underscores.rs  variables.rs
src/bit_patterns/: mod.rs
src/boxes/: definition.rs  dereference.rs  mod.rs
src/channels/: definition.rs  (+1 more)
(+358 files in other folders)
