[package]
name = "learning_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "common"
path = "src/lib.rs"

[dependencies]
rand = "0.8.5"
futures = "0.3.28"
async-std = "1.12.0"
strum = "0.26.2"
strum_macros = "0.26.2"
humantime = "2.1.0"
chrono = "0.4.31"
thiserror = "1.0.69"
num = "0.4.1"
clap = "4.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
csv = "1.1"
polars = "0.14"
