[package]
name = "learning_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "common"
path = "src/lib.rs"

[dependencies]
rand = "0.8.5"
futures = "0.3.31"
async-std = "1.13.0"
strum = "0.26.3"
strum_macros = "0.26.4"
humantime = "2.1.0"
chrono = "0.4.39"
thiserror = "2.0.9"
num = "0.4.3"
polars = "0.14"

